# yt-dlp-gui

./: LICENSE  README.md  pyproject.toml
yt_dlp_gui/: __main__.py  main_window.py  settings.py
